<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.xwintop</groupId>
  <artifactId>xJavaFxTool</artifactId>
  <version>0.3.3</version>
  <packaging>jar</packaging>
  <name>xJavaFxTool</name>
  <description>基于JavaFx搭建的实用小工具集合</description>
  <organization>
    <name>xwintop</name>
    <url>https://gitee.com/xwintop</url>
  </organization>
  <url>https://gitee.com/xwintop/xJavaFxTool</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.test.skip>true</maven.test.skip>
    <maven.compiler.source>8</maven.compiler.source>
    <maven.compiler.target>8</maven.compiler.target>
    <jpro.version>2022.1.3</jpro.version>
  </properties>
  <repositories>
    <!--    <repository>-->
    <!--      <id>aliyunmaven</id>-->
    <!--      <url>https://maven.aliyun.com/repository/public</url>-->
    <!--    </repository>-->
    <!--    <repository>-->
    <!--      <id>jitpack.io</id>-->
    <!--      <url>https://jitpack.io</url>-->
    <!--    </repository>-->
    <repository>
      <id>jpro - sandec repository</id>
      <url>https://sandec.jfrog.io/ui/native/repo</url>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.gitee.xwintop</groupId>
      <artifactId>xcore</artifactId>
      <version>0.0.8</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.24</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.sandec.jpro</groupId>
      <artifactId>jpro-webapi</artifactId>
      <version>${jpro.version}</version>
      <scope>compile</scope>
    </dependency>
  </dependencies>
  <pluginRepositories>
    <pluginRepository>
      <id>jpro - sandec repository</id>
      <url>https://sandec.jfrog.io/ui/native/repo</url>
    </pluginRepository>
  </pluginRepositories>
  <build>
    <plugins>
      <plugin>
        <groupId>com.sandec.jpro</groupId>
        <artifactId>jpro-maven-plugin</artifactId>
        <version>${jpro.version}</version>
        <configuration>
          <visible>false</visible>
          <JVMArgs>
            <!-- <JVMArg>your-args</JVMArg> -->
          </JVMArgs>
          <mainClassName>com.xwintop.xJavaFxTool.XJavaFxToolApplication</mainClassName>
          <openingPath>/</openingPath>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <finalName>xJavaFxTool</finalName>
          <appendAssemblyId>false</appendAssemblyId>
          <encoding>utf-8</encoding>
          <archive>
            <manifest>
              <mainClass>com.xwintop.xJavaFxTool.XJavaFxToolMain</mainClass>
            </manifest>
          </archive>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <!--      <plugin>-->
      <!--        <groupId>org.openjfx</groupId>-->
      <!--        <artifactId>javafx-maven-plugin</artifactId>-->
      <!--        <version>0.0.8</version>-->
      <!--        <configuration>-->
      <!--          <mainClass>com.xwintop.xJavaFxTool.XJavaFxToolMain</mainClass>-->
      <!--        </configuration>-->
      <!--      </plugin>-->
      <plugin>
        <groupId>io.github.fvarrui</groupId>
        <artifactId>javapackager</artifactId>
        <version>1.6.5</version>
        <configuration>
          <bundleJre>true</bundleJre>
          <mainClass>com.xwintop.xJavaFxTool.XJavaFxToolMain</mainClass>
          <generateInstaller>true</generateInstaller>
          <platform>auto</platform>
          <createZipball>true</createZipball>
          <administratorRequired>false</administratorRequired>
          <customizedJre>true</customizedJre>
          <winConfig>
            <!-- general properties -->
            <generateSetup>true</generateSetup>
            <generateMsi>false</generateMsi>
            <!-- setup generation properties -->
            <setupMode>installForAllUsers</setupMode>
            <createDesktopIconTask>true</createDesktopIconTask>
            <disableDirPage>false</disableDirPage>
            <disableFinishedPage>false</disableFinishedPage>
            <disableRunAfterInstall>false</disableRunAfterInstall>
            <disableWelcomePage>false</disableWelcomePage>
            <createDesktopIconTask>false</createDesktopIconTask>
            <setupLanguages>
              <chinesesimp>compiler:Default.isl</chinesesimp>
              <english>compiler:Languages\English.isl</english>
            </setupLanguages>
          </winConfig>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
